Adding release pkgs deps

--- a/1.3/Dockerfile
+++ b/1.3/Dockerfile
@@ -2,10 +2,16 @@ FROM azukiapp/elixir:1.3
 
 # install postgresql client and build-base
 RUN  apk add --update \
-    git  \
-    postgresql-client \
+    bash \
+    ncurses \
+    git \
+    curl \
+    openssh \
+    sshpass \
+    openssl \
     build-base \
     imagemagick \
+    postgresql-client \
   && mix local.hex --force \
   && rm -rf /var/cache/apk/* /var/tmp/*
 
